
name:                ethereum-encryption
version:             0.1.0.0
author:              jamshid
maintainer:          jim
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-encryption
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.7 && <4.8
                     , binary
                     , cipher-aes
                     , Crypto
                     , cryptohash
                     , crypto-random
                     , crypto-pubkey
                     , crypto-pubkey-types
                     , bytestring >=0.10 && <0.11
                     , base16-bytestring
                     , ethereum-client-haskell
                     , ethereum-data-leveldb
                     , ethereum-rlp
                     , network >=2.6 && <2.7
                     , haskoin >=0.1 && <0.2
                     , entropy >=0.3 && <0.4
                     , transformers
                     , ansi-wl-pprint
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O2
